--- a/src/templates/backend/base.html
+++ b/src/templates/backend/base.html
@@ -1,4 +1,8 @@
 {% load static %}
+{% load bootstrap4 %}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='full' %}
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -51,7 +55,7 @@
         <footer class="sticky-footer bg-white">
             <div class="container my-auto">
                 <div class="copyright text-center my-auto">
-                    <span>Copyright &copy; Your Website 2021</span>
+                    <span>Copyright &copy; Your Website 2024</span>
                 </div>
             </div>
         </footer>
