--- a/src/product/templates/products/create.html
+++ b/src/product/templates/products/create.html
@@ -1,21 +1,28 @@
 {% extends 'backend/base.html' %}
 
-{% block title %} Create Product {% endblock %}
+{% block title %}Create Product{% endblock %}
 
 {% block content %}
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-0 text-gray-800">Create Product</h1>
-        <a href="{% url 'product:create.product' %}" class="float-right btn btn-primary">All Product</a>
+        <a href="{% url 'product:list.product' %}" class="float-right btn btn-primary">All Products</a>
     </div>
 
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <!-- Product fields go here (e.g., title, sku, description) -->
 
-    <script>
-    var varients = {{ variants|safe }}
-    console.log(typeof varients)
-    </script>
+        <div class="form-group">
+            <label for="variant">Select Variant:</label>
+            <select class="form-control" id="variant" name="variant">
+                {% for variant in variants %}
+                    <option value="{{ variant.id }}">{{ variant.title }}</option>
+                {% endfor %}
+            </select>
+        </div>
 
-    <div id="root">
-        <CreateProduct id="variants" data-variants="{{ variants|safe }}"></CreateProduct>
-    </div>
+        
 
+        <button type="submit" class="btn btn-primary">Save Product</button>
+    </form>
 {% endblock %}
